# avs-device-sdk

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CompileAIDaemon.sh  ISSUE_TEMPLATE.md  NOTICE.txt  PULL_REQUEST_TEMPLATE.md  README.md  ReleaseAIDaemon.sh  SECURITY.md  ____init_____8py.html  _a2_d_p_role_8h.html  _a2_d_p_role_8h__dep__incl.dot  _a2_d_p_role_8h__dep__incl.map  _a2_d_p_role_8h__dep__incl.md5  _a2_d_p_role_8h_source.html  _a2_d_p_sink_interface_8h.html  _a2_d_p_sink_interface_8h__dep__incl.dot  _a2_d_p_sink_interface_8h__dep__incl.map  _a2_d_p_sink_interface_8h__dep__incl.md5  _a2_d_p_sink_interface_8h__incl.dot  _a2_d_p_sink_interface_8h__incl.map  _a2_d_p_sink_interface_8h__incl.md5  _a2_d_p_sink_interface_8h_source.html  _a2_d_p_source_interface_8h.html  _a2_d_p_source_interface_8h__dep__incl.dot  _a2_d_p_source_interface_8h__dep__incl.map  _a2_d_p_source_interface_8h__dep__incl.md5  _a2_d_p_source_interface_8h__incl.dot  _a2_d_p_source_interface_8h__incl.map  _a2_d_p_source_interface_8h__incl.md5  _a2_d_p_source_interface_8h_source.html  _a_c_l_2test_2_transport_2_common_2_common_8cpp.html  _a_c_l_2test_2_transport_2_common_2_common_8cpp__incl.dot  _a_c_l_2test_2_transport_2_common_2_common_8cpp__incl.map  _a_c_l_2test_2_transport_2_common_2_common_8cpp__incl.md5  _a_c_l_2test_2_transport_2_common_2_common_8h.html  _a_c_l_2test_2_transport_2_common_2_common_8h__dep__incl.dot  _a_c_l_2test_2_transport_2_common_2_common_8h__dep__incl.map  (+53427 more)
ACL/src/: AVSConnectionManager.cpp  AttachmentManager.cpp  CMakeLists.txt  EnumUtils.cpp  Message.cpp  MessageRequest.cpp  Values.cpp
ACL/test/: AVSConnectionManagerTest.cpp  AttachmentManagerTest.cpp  CMakeLists.txt  MessageTest.cpp  MockAuthObserver.h
ADSL/src/: ADSLComponent.cpp  CMakeLists.txt  DirectiveProcessor.cpp  DirectiveRouter.cpp  DirectiveSequencer.cpp  HandlerAndPolicy.cpp  MessageInterpreter.cpp  NamespaceAndName.cpp
AFML/src/: AudioActivityTracker.cpp  CMakeLists.txt  Channel.cpp  FocusManagementComponent.cpp  FocusManager.cpp  VisualActivityTracker.cpp
AVSCommon/: CMakeLists.txt
AVSCommon/Utils/: CMakeLists.txt
AVSCommon/src/: AVSDirective.cpp  AVSMessage.cpp  AVSMessageHeader.cpp  AttachmentManager.cpp  CMakeLists.txt  JSONUtils.cpp  Timer.cpp
AVSCommon/test/: AttachmentManagerTest.cpp  CMakeLists.txt  JSONUtilTest.cpp  TimerTest.cpp
AVSGatewayManager/src/: AVSGatewayManager.cpp  AuthRefreshedObserver.cpp  CMakeLists.txt  PostConnectVerifyGatewaySender.cpp
AVSUtils/src/: AlexaClientSDKInit.cpp  CMakeLists.txt  Executor.cpp  LibcurlUtils.cpp  Logger.cpp  TaskQueue.cpp  TaskThread.cpp
ApplicationUtilities/: CMakeLists.txt
ApplicationUtilities/AndroidUtilities/: CMakeLists.txt
ApplicationUtilities/DefaultClient/: CMakeLists.txt
ApplicationUtilities/Resources/: CMakeLists.txt
ApplicationUtilities/SDKComponent/: CMakeLists.txt
ApplicationUtilities/SystemSoundPlayer/: CMakeLists.txt
AuthDelegate/src/: AuthDelegate.cpp  CMakeLists.txt  Config.cpp  HttpPost.cpp
CapabilitiesDelegate/src/: CMakeLists.txt  CapabilitiesDelegate.cpp  DiscoveryEventSender.cpp  PostConnectCapabilitiesPublisher.cpp
CapabilityAgents/: CMakeLists.txt
CapabilityAgents/AIP/: CMakeLists.txt
CapabilityAgents/Alerts/: CMakeLists.txt
CapabilityAgents/Alexa/: CMakeLists.txt
CapabilityAgents/ApiGateway/: CMakeLists.txt
CapabilityAgents/AudioPlayer/: CMakeLists.txt
CapabilityAgents/Bluetooth/: CMakeLists.txt
CapabilityAgents/DoNotDisturb/: CMakeLists.txt
CapabilityAgents/Equalizer/: CMakeLists.txt
CapabilityAgents/ExternalMediaPlayer/: CMakeLists.txt
CapabilityAgents/InteractionModel/: CMakeLists.txt
CapabilityAgents/MRM/: CMakeLists.txt
CapabilityAgents/ModeController/: CMakeLists.txt
CapabilityAgents/Notifications/: CMakeLists.txt
CapabilityAgents/PlaybackController/: CMakeLists.txt
CapabilityAgents/PowerController/: CMakeLists.txt
CapabilityAgents/RangeController/: CMakeLists.txt
CapabilityAgents/Settings/: CMakeLists.txt
CapabilityAgents/SoftwareComponentReporter/: CMakeLists.txt
CapabilityAgents/SpeakerManager/: CMakeLists.txt
CapabilityAgents/SpeechSynthesizer/: CMakeLists.txt
CapabilityAgents/System/: CMakeLists.txt
CapabilityAgents/TemplateRuntime/: CMakeLists.txt
CapabilityAgents/ToggleController/: CMakeLists.txt
CertifiedSender/src/: CMakeLists.txt  CertifiedSender.cpp  SQLiteMessageStorage.cpp
CertifiedSender/test/: CMakeLists.txt  CertifiedSenderTest.cpp  MessageStorageTest.cpp  MockCertifiedSender.h  MockMessageStorage.h
ContextManager/src/: CMakeLists.txt  ContextManager.cpp
DCFDelegate/src/: CMakeLists.txt  DCFDelegate.cpp
Diagnostics/src/: AudioInjectorMicrophone.cpp  CMakeLists.txt  DevicePropertyAggregator.cpp  DeviceProtocolTracer.cpp  DiagnosticsUtils.cpp  FileBasedAudioInjector.cpp
ESP/src/: CMakeLists.txt  DummyESPDataProvider.cpp  ESPDataProvider.cpp
Endpoints/src/: CMakeLists.txt  DefaultEndpointBuilder.cpp  Endpoint.cpp  EndpointAttributeValidation.cpp  EndpointBuilder.cpp  EndpointRegistrationManager.cpp
KWD/: CMakeLists.txt
KWD/KWDProvider/: CMakeLists.txt
KWD/KittAi/: CMakeLists.txt
KWD/Sensory/: CMakeLists.txt
KWD/src/: AbstractKeywordDetector.cpp  CMakeLists.txt
KWD/test/: AbstractKeywordDetectorTest.cpp
MediaPlayer/: .gitignore  CMakeLists.txt
MediaPlayer/AndroidSLESMediaPlayer/: CMakeLists.txt
MediaPlayer/GStreamerMediaPlayer/: CMakeLists.txt
MediaPlayer/inputs/: fox_dog_playlist.m3u
MediaPlayer/src/: AttachmentReaderSource.cpp  BaseStreamSource.cpp  CMakeLists.txt  ErrorTypeConversion.cpp  IStreamSource.cpp  MediaPlayer.cpp  Normalizer.cpp  OffsetManager.cpp  UrlSource.cpp
MediaPlayer/test/: CMakeLists.txt  ErrorTypeConversionTest.cpp  MediaPlayerTest.cpp  NormalizerTest.cpp
PlaylistParser/: CMakeLists.txt
PlaylistParser/inputs/: sample.m3u8  sample1.asx  (+1 more)
SampleApp/: CMakeLists.txt  DockerFile-Ubuntu  Dockerfile-Ubuntu
SampleApplications/: CMakeLists.txt
applications/: CMakeLists.txt
core/: CMakeLists.txt
doc/: CMakeLists.txt  doxygen.cfg.in  mainpage.md
shared/: CMakeLists.txt
(+4338 files in other folders)
