cmake_minimum_required(VERSION 3.1 FATAL_ERROR)

add_subdirectory("acsdkApplicationAudioPipelineFactoryInterfaces")
add_subdirectory("acsdkCBLAuthorizationDelegate")
add_subdirectory("acsdkDefaultInternetConnectionMonitor")
add_subdirectory("acsdkDefaultSampleApplicationOptions")
add_subdirectory("acsdkLibcurlAlexaCommunications")
add_subdirectory("acsdkLibcurlHTTPContentFetcher")
add_subdirectory("acsdkNullMetricRecorder")
add_subdirectory("acsdkPreviewAlexaClient")
add_subdirectory("acsdkSampleApplicationCBLAuthRequester")
add_subdirectory("acsdkSampleApplicationInterfaces")

if (GSTREAMER_MEDIA_PLAYER)
    add_subdirectory("acsdkGstreamerApplicationAudioPipelineFactory")
elseif(ANDROID_MEDIA_PLAYER)
    add_subdirectory("acsdkAndroidApplicationAudioPipelineFactory")
elseif(CUSTOM_MEDIA_PLAYER)
    add_subdirectory("acsdkCustomApplicationAudioPipelineFactory")
endif()
