cmake_minimum_required(VERSION 3.1 FATAL_ERROR)

add_subdirectory("acsdkAlexaEventProcessedNotifierInterfaces")
add_subdirectory("acsdkCore")
add_subdirectory("acsdkPostConnectOperationProviderRegistrar")
add_subdirectory("acsdkPostConnectOperationProviderRegistrarInterfaces")
add_subdirectory("acsdkRegistrationManager")
add_subdirectory("acsdkRegistrationManagerInterfaces")
add_subdirectory("acsdkSystemClockMonitor")
add_subdirectory("acsdkSystemClockMonitorInterfaces")
add_subdirectory("AudioEncoder")
add_subdirectory("Authorization")
add_subdirectory("CodecUtils")
add_subdirectory("Crypto")
add_subdirectory("Properties")
