cmake_minimum_required(VERSION 3.1 FATAL_ERROR)

add_subdirectory("acsdkCommunication")
add_subdirectory("acsdkCommunicationInterfaces")
add_subdirectory("acsdkManufactory")
add_subdirectory("acsdkNotifier")
add_subdirectory("acsdkNotifierInterfaces")
add_subdirectory("acsdkShared")
add_subdirectory("acsdkShutdownManager")
add_subdirectory("acsdkShutdownManagerInterfaces")
add_subdirectory("acsdkStartupManager")
add_subdirectory("acsdkStartupManagerInterfaces")
add_subdirectory("KWD")

